# sqlitetots

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs  parser.rs  sql.rs
